attempt to fix alignment svg alignment on mobile

--- a/index.css
+++ b/index.css
@@ -303,6 +303,7 @@ svg {
 .education-section li,
 .skills-section li {
     display: flex;
+    align-items: center;
     color: var(--text-color);
     gap: 4px;
 }
